--- a/Labs/Phishing/web/assets/stylesheet.css
+++ b/Labs/Phishing/web/assets/stylesheet.css
@@ -1,43 +1,100 @@
 body {
-    margin: 0;
-    color: whitesmoke;
-    background-color:#b72b26;
+  margin: 0;
+  color: whitesmoke;
+  background-color: #b72b26;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.content{
-
-    margin:160px 0 0 0;
-    font-size:40px;
-    padding-left:15px;
-    padding-right:15px;
+.content {
+  background-color: #896462;
+  border: black 4px solid;
+  border-radius: 10px;
+  font-size: 40px;
+  padding: 100px 200px;
+  text-align: center;
 }
 
 header {
-    background-color:  #896462;
-    color: #fff;
-    padding: 10px;
-    position: fixed;
-    width: 100%;
-    height: 100px;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 10px;
-    border:4px;
-    border-style:solid;
-    border-color:black;
+  background-color: #896462;
+  color: #fff;
+  padding: 10px;
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  border: 4px;
+  border-style: solid;
+  border-color: black;
 }
 
 .logo {
-    height: 100px;
-    width: 100px;
-    text-decoration: none;
+  height: 100px;
+  width: 100px;
+  text-decoration: none;
+  margin-left: 10px;
 }
 
-a{
-    color:#fff;
+a {
+  color: #fff;
 }
-a:visited{
-    color:#fff
+a:visited {
+  color: #fff;
+}
+
+form {
+  width: 800px;
+  background-color: #614443;
+  border: black 4px solid;
+  padding: 20px;
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+}
+
+form * {
+  margin: 20px 0px;
+}
+
+form input {
+  padding: 15px;
+  font-size: 30px;
+  width: 400px;
+  background-color: rgb(206, 202, 202);
+  border: none;
+}
+
+input:focus {
+  transition-duration: 0.5s;
+  outline: none;
+  background-color: white;
+}
+
+button {
+  background-color: black;
+  color: whitesmoke;
+  padding: 20px;
+  height: 80px;
+  width: 50%;
+  font-size: 30px;
+  text-align: center;
+  border-color: black;
+  border-style: solid;
+  margin-top: 50px;
+}
+
+button:hover {
+  transition-duration: 1s;
+  background-color: black;
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  font-weight: bold;
+}
+
+label {
+  font-size: 45px;
+  font-weight: bold;
 }
